--- a/LaskarSampahIRT/View/Base.lproj/LaunchScreen.storyboard
+++ b/LaskarSampahIRT/View/Base.lproj/LaunchScreen.storyboard
@@ -17,18 +17,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group 6.2-1" translatesAutoresizingMaskIntoConstraints="NO" id="FFC-td-HWN">
-                                <rect key="frame" x="37.666666666666657" y="256" width="300" height="300"/>
+                            <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LASKARSAMPAHH" highlightedImage="LASKARSAMPAHH" translatesAutoresizingMaskIntoConstraints="NO" id="oyd-l0-STX">
+                                <rect key="frame" x="62.666666666666657" y="281" width="249.99999999999997" height="250"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="300" id="c5W-g7-qCB"/>
-                                    <constraint firstAttribute="width" constant="300" id="pGT-y5-2Ve"/>
+                                    <constraint firstAttribute="width" constant="250" id="S9U-oP-VA9"/>
+                                    <constraint firstAttribute="height" constant="250" id="gM8-9D-NHj"/>
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.99945229290000004" green="0.98950296640000002" blue="0.92548209429999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" red="0.18823529410000001" green="0.5450980392" blue="0.44705882349999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="FFC-td-HWN" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="YCI-G9-cce"/>
-                            <constraint firstItem="FFC-td-HWN" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="xjO-IP-Kqi"/>
+                            <constraint firstItem="oyd-l0-STX" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="WnE-IQ-Kgu"/>
+                            <constraint firstItem="oyd-l0-STX" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="oxY-cc-lYG"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -39,6 +39,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Group 6.2-1" width="1416" height="1436"/>
+        <image name="LASKARSAMPAHH" width="109" height="97"/>
     </resources>
 </document>
