--- a/LaskarSampahIRT/Pages/Profile/ProfileStoryboard.storyboard
+++ b/LaskarSampahIRT/Pages/Profile/ProfileStoryboard.storyboard
@@ -203,16 +203,17 @@
                         <outlet property="imgRateing" destination="hEG-Vj-JBb" id="u5N-BN-IxP"/>
                         <outlet property="tableViewHistory" destination="6dZ-2t-P66" id="pRT-eB-Fh7"/>
                         <outlet property="viewHistory" destination="N6t-9M-3cz" id="DUd-MC-ywU"/>
+                        <segue destination="LbZ-uP-xDx" kind="show" identifier="ShowDetail" id="KhT-Xt-8tq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0mf-wi-CiF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-7.2000000000000002" y="23.645320197044335"/>
         </scene>
-        <!--View Controller-->
+        <!--Detail History View Controller-->
         <scene sceneID="eU5-hJ-T17">
             <objects>
-                <viewController id="LbZ-uP-xDx" sceneMemberID="viewController">
+                <viewController id="LbZ-uP-xDx" customClass="detailHistoryViewController" customModule="LaskarSampahIRT" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kVh-dS-5rl">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -220,6 +221,23 @@
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Czl-2e-5V1">
                                 <rect key="frame" x="27" y="98" width="326" height="680"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kRW-4j-uWL">
+                                        <rect key="frame" x="8" y="8" width="310" height="664"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="153" id="Ozw-tz-62B" customClass="detailHistoriTableViewCell" customModule="LaskarSampahIRT" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="28" width="310" height="153"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ozw-tz-62B" id="DBH-0b-Ib3">
+                                                    <rect key="frame" x="0.0" y="0.0" width="310" height="152.66666666666666"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </prototypes>
+                                    </tableView>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
