--- a/LaskarSampahIRT/Pages/Bank/BankSampahStoryboard.storyboard
+++ b/LaskarSampahIRT/Pages/Bank/BankSampahStoryboard.storyboard
@@ -136,13 +136,6 @@
                                         <color key="textColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Telepon" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KlO-tO-kFA">
-                                        <rect key="frame" x="56" y="472" width="289" height="36"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <color key="textColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bj6-Hp-jxL">
                                         <rect key="frame" x="177.66666666666666" y="304" width="0.0" height="0.0"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -213,6 +206,14 @@
                                             <action selector="btnPetunjukArah:" destination="oDw-yi-iLZ" eventType="touchUpInside" id="SUc-S1-uq4"/>
                                         </connections>
                                     </button>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" text="Telepon" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="MqS-IM-iU4">
+                                        <rect key="frame" x="56" y="472" width="289" height="33"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        <dataDetectorType key="dataDetectorTypes" phoneNumber="YES"/>
+                                    </textView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
@@ -233,7 +234,7 @@
                         <outlet property="lblBankSampahTitle" destination="C74-ji-h83" id="std-TK-HzL"/>
                         <outlet property="lblContact" destination="uIT-gR-s85" id="QKz-Eu-nUQ"/>
                         <outlet property="lblEmail" destination="SCX-Yf-zb8" id="wRo-zy-duh"/>
-                        <outlet property="lblTelepon" destination="KlO-tO-kFA" id="WuD-6X-8Hf"/>
+                        <outlet property="lblTelepon" destination="MqS-IM-iU4" id="skk-th-If5"/>
                         <outlet property="mapView" destination="HBt-h0-EAs" id="jEj-Wy-Abh"/>
                         <outlet property="titleDetail" destination="Z92-hq-w0H" id="c8E-Vh-rtb"/>
                         <outlet property="viewBgitem" destination="p3x-LG-RQQ" id="SBX-Ce-xpN"/>
